# rivermap-osmium-tools

./: CMakeLists.txt  README.md
cmake/: FindOsmium.cmake
src/: CMakeLists.txt  osmium_rivermap.cpp  osmium_toogr.cpp  osmium_toogr2.cpp  osmium_waterway_ids.cpp  util.cpp
